--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "proxy": "http://localhost:3001",
   "name": "front",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -26,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,7 +45,12 @@
       "last 1 safari version"
     ]
   },
+  
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0"
   }
+  
 }
