--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,4 +1,5 @@
 {
+  
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -18,9 +19,12 @@
     "sequelize": "^6.32.1",
     "validator": "^13.11.0"
   },
+  
   "scripts": {
     "start": "node server.js",
-    "dev" :"nodemon server.js"
+    "dev" :"nodemon server.js",
+    "test": "node --test tests/"
+
   },
   "name": "backend",
   "version": "1.0.0",
